--- a/WebMarkup Assesment/index.html
+++ b/WebMarkup Assesment/index.html
@@ -20,11 +20,11 @@
 
 <nav>
 	<ul class ="navbar">
-		<a href="#maincontent"><li> Main</a></li>
-	<a href="#secondarycontent"><li> Secondary</a></li>
-	<a href="#sportcontent">	<li>Sport </a></li>
-	<a href="#referalcontent">	<li><a href="#referalcontent">Referral</a></li>
-	<a href="#contactcontent">	<li>Contact</a></li>
+		<a href="#maincontent"><li class="navText"> Main</a></li>
+	<a href="#secondarycontent"><li class="navText"> Secondary</a></li>
+	<a href="#sportcontent">	<li class="navText">Sport </a></li>
+	<a href="#referalcontent">	<li class="navText"><a href="#referalcontent">Referral</a></li>
+	<a href="#contactcontent">	<li class="navText">Contact</a></li>
 	</ul>
 </nav>
 
@@ -155,6 +155,48 @@ HWA-RANG DRAGON TAEKWONDO</h3>
 </section>
 
 
+<section id="referalcontent">
+	<header>
+		<h1 class = "sectionTitle"> HWA-RANG DRAGON</h1>
+	</header>
+	<article class="articleFlex" id ="test2">
+
+		<aside id = "test">
+	
+		<!-- ADD 300 MORE WORDS -->
+		<p class="haarlem2">The district is located to the east of the center, directly under the Haarlem-Amsterdam railroad track. The neighborhood is originally a working-class neighborhood with densely built-up buildings and small houses built around 1900, particularly on the west side. To the east, the neighborhood borders on Parkwijk . There are more post-war buildings such as flats.</p>
+		<h3> Visit our <a href="https://www.taekwon.nl/brazilian-jiu-jitsu/" target="_blank">  Website </a> </h3>
+		</aside>
+		<img src="img/dragon.jpg" alt="Picture of people practicing Brazilian Jiu Jitsu" title="Brazilian Jiu Jitsu" id="brazJiu">
+
+	
+	</article>
+	
+</section>
+
+<section id="contactcontent" class="container">
+<form action="http://witan.nl/inholland/testform.php" method="POST">
+<fieldset>
+	<legend>Contact Form</legend>
+
+ <label for="name"> Name</label>
+ 
+    <input type="text" id="fname" name="name" placeholder="Your name.." required>
+
+ <label for="email"> E-mail</label>
+ 
+    <input type="email" id="fname" name="email" placeholder="Your e-mail.." required>
+
+
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="message" placeholder="Write something.." required></textarea>
+
+    <input type="submit" value="Submit">
+</fieldset>
+
+	</form>
+</section>
 
 <footer>
 	&copy; Copyright 2019 | Cosmin Ilie
